# markdown-novel-tools

./: .gitignore  .pylintrc  MANIFEST.in  README.md  TODO.md  example_config.toml  example_config.yaml  pyproject.toml  requirements-convert.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: check.yaml
data/: README.txt  example-pdf.css  example-template.docx
data/css/: epub.css  pdf-dark.css  pdf-light.css  pdf-misc.css
data/markdown-templates/: character.md  culture.md  religion.md  scene.md
src/markdown-novel-tools/: constants.py  outline.py  scene.py
src/markdown_novel_tools/: __init__.py  config.py  constants.py  convert.py  frontmatter.py  manuscript.py  mdfile.py  novel.py  outline.py  replace.py  repo.py  scene.py  shunn.py  utils.py
tests/: __init__.py  test_config.py  test_constants.py  test_mdfile.py  test_novel.py  test_outline.py  test_scene.py  test_utils.py
tests/data/: matrix-arcs.md  matrix-beats.md  matrix-full.md  matrix-povs.md  matrix-questions.md  matrix-scenes.md  matrix-simple.html  test-multi-broken.md  test-multi-extra-header.md  test-simple-filter.html  test-simple-second-scene.md  test-simple-split_columns-noslash.md  test-simple-split_columns.md  test-simple.html  test-simple.md  test-simple.yaml
tests/data/general/: test-multi-missing-header.md  test-multi-scene.md  test-simple-filter.html  test-simple-filter.md  test-simple-filter.yaml  test-simple-second-scene.md  test-simple-split_columns.md
tests/data/matrix/: matrix-full.md  matrix-povs.md  matrix-questions.md  matrix-scenes.md
